--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
     command: >
       sh -c "\
         sleep 15 && \
-        python3 -m service.producers"
+        python3 -m service.producers --n-producers=2"
 
   anonymizer:
     build:
@@ -70,7 +70,7 @@ services:
     depends_on:
       - kafka-broker-0
       - kafka-broker-1
-    command: ["python", "-m", "service.anonimizer"]
+    command: ["python", "-m", "service.anonymizer"]
 
   preprocessor:
     build:
