--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,9 @@ services:
       - '9092:9092'
     environment:
       - KAFKA_CFG_NODE_ID=0
+      - KAFKA_KRAFT_CLUSTER_ID=QelM2dIFQGiUFHAJIHRYnA
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9095
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-0:9092,EXTERNAL://localhost:9095
@@ -18,6 +19,11 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - KAFKA_CFG_NUM_PARTITIONS=1
       - KAFKA_CFG_DEFAULT_REPLICATION_FACTOR=1
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   kafka-broker-1:
     hostname: 'kafka-1'
@@ -27,8 +33,9 @@ services:
       - '9094:9094'
     environment:
       - KAFKA_CFG_NODE_ID=1
+      - KAFKA_KRAFT_CLUSTER_ID=QelM2dIFQGiUFHAJIHRYnA
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9094,CONTROLLER://:9093,EXTERNAL://:9096
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-1:9094,EXTERNAL://localhost:9096
@@ -39,6 +46,11 @@ services:
       - KAFKA_CFG_DEFAULT_REPLICATION_FACTOR=1
     depends_on:
       - kafka-broker-0
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9094 --list"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
   producer:
     build:
@@ -50,13 +62,11 @@ services:
     environment:
       - BOOTSTRAP_SERVERS=kafka-0:9092,kafka-1:9094
     depends_on:
-      - kafka-broker-0
-      - kafka-broker-1
-    # TODO: think of another logic to start producing only after kafka broker is available
-    command: >
-      sh -c "\
-        sleep 15 && \
-        python3 -m services.producers --n-producers=2"
+      kafka-broker-0:
+        condition: service_healthy
+      kafka-broker-1:
+        condition: service_healthy
+    command: ["python", "-m", "services.producers", "--n-producers=2"]
 
   anonymizer:
     build:
@@ -68,8 +78,10 @@ services:
     environment:
       - BOOTSTRAP_SERVERS=kafka-0:9092,kafka-1:9094
     depends_on:
-      - kafka-broker-0
-      - kafka-broker-1
+      kafka-broker-0:
+        condition: service_healthy
+      kafka-broker-1:
+        condition: service_healthy
     command: ["python", "-m", "services.anonymizer"]
 
   preprocessor:
@@ -84,8 +96,10 @@ services:
     volumes:
       - ./artifacts:/app/artifacts
     depends_on:
-      - kafka-broker-0
-      - kafka-broker-1
+      kafka-broker-0:
+        condition: service_healthy
+      kafka-broker-1:
+        condition: service_healthy
     command: ["python", "-m", "services.preprocessor"]
 
   inference:
@@ -100,8 +114,10 @@ services:
     volumes:
       - ./artifacts:/app/artifacts
     depends_on:
-      - kafka-broker-0
-      - kafka-broker-1
+      kafka-broker-0:
+        condition: service_healthy
+      kafka-broker-1:
+        condition: service_healthy
     command: ["python", "-m", "services.inference"]
 
   ui:
@@ -116,8 +132,10 @@ services:
     ports:
       - "7860:7860"
     depends_on:
-      - kafka-broker-0
-      - kafka-broker-1
+      kafka-broker-0:
+        condition: service_healthy
+      kafka-broker-1:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:7860"]
       interval: 30s
